# purr

./: Cargo.toml  README.md
.github/workflows/: build.yml  tests.yml
src/: errors.rs  lib.rs  main.rs  print.rs
tests/: cli.rs  fs.rs  stdio.rs
