[package]
name = "purr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.17", features = ["derive"] }
thiserror = "1.0"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
